--- a/config.toml
+++ b/config.toml
@@ -50,7 +50,7 @@ defaultContentLanguageInSubdir = false
   font = "default"
 
   # Your details.
-  name = "Lena Smith"
+  name = "Thiyanga Talagala"
   role = "Professor of Artificial Intelligence"
 
   # Organizations/Affiliations.
