link talks folder to the main page

--- a/config.toml
+++ b/config.toml
@@ -260,7 +260,7 @@ defaultContentLanguageInSubdir = false
 
 [[menu.main]]
   name = "Talks"
-  url = "#Talks"
+  url = "#talks"
   weight = 4
 
 [[menu.main]]
