--- a/config.toml
+++ b/config.toml
@@ -227,7 +227,7 @@ defaultContentLanguageInSubdir = false
   [[params.social]]
     icon = "google-scholar"
     icon_pack = "ai"
-    link = "https://scholar.google.co.uk/citations?user=sIwtMXoAAAAJ"
+    link = "https://scholar.google.com.au/citations?user=7cUtrWUAAAAJ&hl=en&oi=sra"
 
   [[params.social]]
     icon = "github"
