changed config file params.publications to params.software

--- a/config.toml
+++ b/config.toml
@@ -162,7 +162,7 @@ defaultContentLanguageInSubdir = false
     time = true
 
   # Configuration of publication pages.
-  [params.publications]
+  [params.software]
     # Date format (refer to Go's date format: http://fuckinggodateformat.com )
     #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
     date_format = "January, 2006"
