removed the tag academics

--- a/themes/hugo-academic/theme.toml
+++ b/themes/hugo-academic/theme.toml
@@ -1,4 +1,4 @@
-name = "Academic"
+name = ""
 license = "MIT"
 licenselink = "https://github.com/gcushen/hugo-academic/blob/master/LICENSE.md"
 description = "Easily create beautifully simple academic or personal sites"
