--- a/config.toml
+++ b/config.toml
@@ -137,7 +137,7 @@ defaultContentLanguageInSubdir = false
 
   # Link custom CSS and JS assets
   #   (relative to /static/css and /static/js respectively)
-  custom_css = []
+  custom_css = ["css/academic.css"]
   custom_js  = []
 
   # Publication types.
