link the awards tab

--- a/config.toml
+++ b/config.toml
@@ -248,7 +248,7 @@ defaultContentLanguageInSubdir = false
 
 [[menu.main]]
   name = "Awards"
-  url = "#awards"
+  url = "#projects"
   weight = 5
 
 [[menu.main]]
