--- a/themes/hugo-academic/data/themes/default.toml
+++ b/themes/hugo-academic/data/themes/default.toml
@@ -14,9 +14,9 @@ primary_dark = "#0069c0"
 #menu_text = "#34495e"
 #menu_text_active = "#0095eb"
 #menu_title = "#2b2b2b"
-menu_primary = "#3f51b5" # 500
+menu_primary = "#000080" # 500
 menu_text = "#fff"
-menu_text_active = "#8c9eff" # A100
+menu_text_active = "#00FF00" # A100
 menu_title = "#fff"
 
 # Home sections
