alter the home page

--- a/config.toml
+++ b/config.toml
@@ -228,7 +228,7 @@ defaultContentLanguageInSubdir = false
 
 [[menu.main]]
   name = "Home"
-  url = "#about"
+  url = "#hero"
   weight = 1
 
 [[menu.main]]
