--- a/config.toml
+++ b/config.toml
@@ -210,7 +210,7 @@ defaultContentLanguageInSubdir = false
   [[params.social]]
     icon = "google-scholar"
     icon_pack = "ai"
-    link = "https://scholar.google.com/citations?user=7cUtrWUAAAAJ&hl=en&oi=ao"
+    link = "https://scholar.google.com.au/citations?user=19EsVzEAAAAJ&hl=en&oi=ao"
 
   [[params.social]]
     icon = "github"
