--- a/config.toml
+++ b/config.toml
@@ -219,8 +219,8 @@ defaultContentLanguageInSubdir = false
   
   [[params.social]]
     icon = "orcid"
-    icon_pack = "fa"
-    link = "https://orcid.org/0000-0002-0656-9789"
+    icon_pack = "ai"
+    link = "//orcid.org/0000-0002-0656-9789"
 
 
 # Navigation Links
