--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -249,5 +249,5 @@ plugins_js  = []
 ## Marketing
 ############################
 [marketing]
-  google_analytics = ""
-  google_tag_manager = ""
+  google_analytics = "UA-131293278"
+  google_tag_manager = "tstalagala@gmail.com"
