update my email address

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -85,7 +85,7 @@ edit_page = {repo_url = "https://github.com/gcushen/hugo-academic", repo_branch 
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "thiyanga.talagala@monash.edu"
+email = "ttalagala@sjp.ac.lk"
 #phone = ""
 
 # Address
